--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:support-v4:23.0.1'
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.github.rithms:riot-api-java:v3.6.1'
 }
