--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mpsp.spyros.loluniverse"
     android:versionCode="1"
-    android:versionName="0.5">
+    android:versionName="0.5" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name=".LolUniverseApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,6 +34,10 @@
         <activity
             android:name=".ChampionDetailsActivity"
             android:label="@string/title_activity_champion_details" >
+        </activity>
+        <activity
+            android:name=".RegionStatusActivity"
+            android:label="@string/title_activity_region_status" >
         </activity>
     </application>
 
